Membuat tampilan about

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,7 @@
     <string name="reset">Reset</string>
     <string name="input_invalid">Tidak boleh kosong.</string>
     <string name="rumus_total">Total : Rp. %1$.2f</string>
+    <string name="tentang_aplikasi">Tentang Aplikasi</string>
+    <string name="copyright">Kalkulator Diskon merupakan cara untuk mengetahui berapa diskon yang diperoleh dan berapa harga yang harus dibayar oleh customer.\n\nAplikasi ini dibuat untuk Assesment 1 Mobpro. \n\nCopyright © 2021 – 2024 Adelia Putri Abadi. \nAll rights reserved.</string>
 
 </resources>
