--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,11 @@
     <string name="list_kosong">Belum ada data</string>
     <string name="x_diklik">%1$s diklik!</string>
     <string name="tambah_list">Tambah List</string>
-    <string name="tambah_error">Belum bisa tambah list.</string>
+
     <string name="keterangan">Keterangan</string>
     <string name="nominal">Nominal</string>
+    <string name="kembali">Kembali</string>
+    <string name="simpan">Simpan</string>
+    <string name="kategori_1">Pendapatan</string>
+    <string name="kategori_2">Pengeluaran</string>
 </resources>
