Membuat dialog konfirmasi hapus

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,9 @@
     <string name="invalid">Keterangan, nominal, dan kategori tidak boleh kosong !</string>
     <string name="lainnya">Opsi lainnya</string>
     <string name="hapus">Hapus list</string>
+    <string name="pesan_hapus">Hapus list ini?</string>
+    <string name="tombol_hapus">Hapus</string>
+    <string name="tombol_batal">Batal</string>
     <string name="kategori_1">Pendapatan</string>
     <string name="kategori_2">Pengeluaran</string>
 </resources>
