--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Assesment Mobpro</string>
+    <string name="app_name">UangKu</string>
     <string name="list_kosong">Belum ada data</string>
     <string name="x_diklik">%1$s diklik!</string>
     <string name="tambah_list">Tambah List Keuangan</string>
@@ -19,4 +19,5 @@
     <string name="grid">Tampilan grid</string>
     <string name="kategori_1">Pendapatan</string>
     <string name="kategori_2">Pengeluaran</string>
+    <string name="gambar_kosong">List ini kosong</string>
 </resources>
