--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="tutup">Tutup</string>
     <string name="logout">Logout</string>
     <string name="tambah_handphone">Tambah hewan</string>
+    <string name="nama">Nama</string>
+    <string name="type_hp">Type hp</string>
+    <string name="batal">Batal</string>
+    <string name="simpan">Simpan </string>
 </resources>
